fix navigation overlapping content on extend animation

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -15,6 +15,7 @@
 	color: $secondaryColor;
 	box-sizing: border-box;
 	height: $headerHeight;
+	overflow: hidden;
 	padding: 115px 16px 72px;
 	transition: height 1s ease, top 1s ease;
 	width: 100%;
